# AekePcmRecord

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/aeke/pcm/audio_record/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/aeke/pcm/audio_record/demo/: NativeAudioRecordDemo.kt
app/src/main/java/com/aeke/pcm/audio_record/demo/audio/: AudioActivity.kt  AudioFormatConverter.kt  AudioPCMPlayer.kt  AudioPlayer.kt  AudioRecorder.kt  AudioUtils.kt  AudioViewModel.kt  CoroutinesExt.kt
app/src/main/res/layout/: activity_audio.xml  activity_native_audio_record_demo.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/aeke/pcm/audio_record/: ExampleUnitTest.kt
audio-record/: build.gradle.kts
audio-record/src/androidTest/java/com/aeke/pcm/audio_record/: ExampleInstrumentedTest.kt
audio-record/src/main/cpp/: CMakeLists.txt  audio_record.cpp
audio-record/src/main/java/com/aeke/pcm/audio_record/: NativeAudioRecord.kt  PCM_FORMAT.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
